<resources>
    <string name="app_name">JobFinder</string>

    <!--Основное меню -->
    <string name="menu_search">Поиск</string>
    <string name="menu_favorite">Избранное</string>
    <string name="menu_applications">Отклики</string>
    <string name="menu_messages">Сообщения</string>
    <string name="menu_profile">Профиль</string>

    <!--Экран поиска -->
    <string name="search_hint_full_content_mode">Должность по подходящим вакансиям</string>
    <string name="search_hint_compact_mode">Должность, ключевые слова</string>
    <string name="jobs_for_you">Вакансии для вас</string>
    <string name="apply">Откликнуться</string>
    <string name="by_relevance">По соответствию</string>

    <plurals name="show_more_vacancies">
        <item quantity="one">Еще %d вакансия</item>
        <item quantity="few">Еще %d вакансии</item>
        <item quantity="many">Еще %d вакансий</item>
        <item quantity="other">Еще %d вакансий</item>
    </plurals>

    <!--Карточка вакансии -->
    <string name="published_date">Опубликовано %s</string>

    <plurals name="currently_watching">
        <item quantity="one">Сейчас просматривает %d человек</item>
        <item quantity="few">Сейчас просматривают %d человека</item>
        <item quantity="many">Сейчас просматривают %d человек</item>
        <item quantity="other">Сейчас просматривают %d человек</item>
    </plurals>

    <!--Экран избранного -->
    <plurals name="total_vacancies">
        <item quantity="one">%d вакансия</item>
        <item quantity="few">%d вакансии</item>
        <item quantity="many">%d вакансий</item>
        <item quantity="other">%d вакансий</item>
    </plurals>
    <string name="database_error">Ошибка при доступе к базе данных</string>
    <string name="database_empty">В избранном нет вакансии</string>

    <!--Экран с деталями вакансии -->
    <string name="responsibilities_title">Ваши задачи</string>
    <string name="ask_a_question">Задайте вопрос работодателю</string>
    <string name="ask_question_hint">Он получит его с откликом на вакансию</string>

    <plurals name="currently_watching_details">
        <item quantity="one">%d человек сейчас смотрит</item>
        <item quantity="few">%d человека сейчас смотрят</item>
        <item quantity="other">%d человек сейчас смотрят</item>
    </plurals>
    <string name="currently_watching_zero">Сейчас никто не смотрит</string>

    <plurals name="applied_number_details">
        <item quantity="one">%d человек уже откликнулся</item>
        <item quantity="few">%d человека уже откликнулись</item>
        <item quantity="other">%d человек уже откликнулись</item>
    </plurals>
    <string name="applied_number_zero">Пока никто не откликнулся</string>

    <!--Остальные экраны -->
    <string name="screen_placeholder">Раздел %s находится в разработке</string>


</resources>