<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_menu_search"
        android:title="@string/menu_search" />
    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/ic_menu_favorite_default"
        android:title="@string/menu_favorite" />
    <item
        android:id="@+id/applicationsFragment"
        android:icon="@drawable/ic_menu_applications"
        android:title="@string/menu_applications" />
    <item
        android:id="@+id/messagesFragment"
        android:icon="@drawable/ic_menu_messages"
        android:title="@string/menu_messages" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_menu_profile"
        android:title="@string/menu_profile" />
</menu>